--- a/www/index.html
+++ b/www/index.html
@@ -577,11 +577,15 @@
             <img src="{{bar.logo.url}}" align="center" style="width:40%" />
           </div>
           <br><br>
-          <p align="center">Endereço: {{bar.street}}, {{bar.state}} - {{bar.cep}}</p>
-          <p align="center">Telefone: {{bar.phone}}</p>
-          <p align="center"></p>
-         <p align="center">
-         <a class="button icon-left ion-ios-location" ng-click="geolocalizar(bar)" style="color:black">Ver no Mapa</a><p align="center">
+          <p style="margin-left:15px">Endereço: {{bar.street}}, {{bar.number}}</p>
+          <p style="margin-left:15px">Bairro: {{bar.district}}</p>
+          <p style="margin-left:15px">Cidade: {{bar.state}}</p>
+          
+          <br/>
+          <p style="margin-left:15px">Telefone: <a href="tel:{{bar.phone}}" style="color:red">{{bar.phone}}</p>
+          <p align="center">
+          <a class="button icon-left ion-ios-location" ng-click="geolocalizar(bar)" style="color:black">Ver no Mapa</a><p align="center">
+         </p>
 
         </ion-content>
       </ion-modal-view>
