--- a/www/index.html
+++ b/www/index.html
@@ -44,6 +44,7 @@
     <script src="js/Service_Cartao.js"></script>
     <script src="js/Service_Usuario.js"></script>
     <script src="js/Service_Amizade.js"></script>
+    <script src="js/Service_Geolocalizacao.js"></script>
     <script src="js/diretivas.js"></script>
     <script src="js/funcoes.js"></script>
 
