trocando icon por botão em chat

--- a/www/index.html
+++ b/www/index.html
@@ -582,7 +582,7 @@
           <p style="margin-left:15px">Endereço: {{bar.street}}, {{bar.number}}</p>
           <p style="margin-left:15px">Bairro: {{bar.district}}</p>
           <p style="margin-left:15px">Cidade: {{bar.state}}</p>
-          
+
           <br/>
           <p style="margin-left:15px">Telefone: <a href="tel:{{bar.phone}}" style="color:red">{{bar.phone}}</p>
           <p align="center">
@@ -998,7 +998,7 @@
           <div class="textarea">
             <textarea id="message"></textarea>
           </div>
-          <i class="icon ion-paper-airplane" ng-click="addMessage()"></i>
+          <button ng-click="addMessage()"><i class="icon ion-paper-airplane" ></i> </button>
         </div>
       </div>
       </ion-view>
