mudanda para servidor de teste

--- a/www/index.html
+++ b/www/index.html
@@ -724,13 +724,13 @@
 
     <script id="sobre" type="text/ng-template">
       <ion-view title="Sobre" >
-          <ion-content padding="true" class="has-header">
+          <ion-content padding="true" class="has-header" ng-controller="Sobre">
 
             <h2>WhiskYou</h2>
             <h3>Versão: 1.50.0</h3>
             <h3>Todos os direitos reservados para Global Gapps</h3>
             <h3>2016</h3>
-
+            <p ng-show="teste">{{servidor}}</p>
           </ion-content>
       </ion-view>
     </script>
