--- a/www/index.html
+++ b/www/index.html
@@ -727,7 +727,7 @@
           <ion-content padding="true" class="has-header" ng-controller="Sobre">
 
             <h2>WhiskYou</h2>
-            <h3>Versão: 1.50.0</h3>
+            <h3>Versão: 1.54.0</h3>
             <h3>Todos os direitos reservados para Global Gapps</h3>
             <h3>2016</h3>
             <p ng-show="teste">{{servidor}}</p>
@@ -976,7 +976,7 @@
             </button>
           </ion-nav-buttons>
           <ion-nav-buttons side="right">
-            <button class="button back-button buttons button-clear header-item ion-android-remove-circle" ng-click="excluirAmizade()"></button>
+            <button class="button back-button buttons button-clear header-item ion-trash-b" ng-click="excluirAmizade()"></button>
           </ion-nav-buttons>
         </ion-nav-bar>
 
