Aumentar a fonte dos nomes Criar Conta e Esqueci a senha na tela de login do app

--- a/www/index.html
+++ b/www/index.html
@@ -90,7 +90,7 @@
                     <i class="button button-icon icon ion-ios-checkmark-empty" style="color: white;">&nbsp;Entrar</i>
                   </button>
                   <br>
-                  <div align="center">
+                  <div align="center" style="font-size: 1.33em;">
                     <a href="#/signup">Criar Conta</a>
                     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                     <a href="#/senha">Esqueci a senha</a>
